<resources>
    <string name="app_name">E Drive</string>
    <string name="vendor_login">Vendor Login</string>
    <string name="user_login">User Login</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="Sign_in">Sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_e_drive">Welcome to E Drive</string>
    <string name="vendor_name">Vendor Name/Username</string>
    <string name="conform_password">Conform Password</string>
    <string name="vendor_registration">Vendor Registration</string>
    <string name="no_updates_available_right_now">No Updates Available Right Now</string>
    <string name="contact_us_via_email">Contact Us Via Email</string>
    <string name="vehicle_information">Vehicle Information</string>
    <string name="user_information">User Information</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="charger_type">Charger Type</string>
    <string name="charger_output">Charger Output</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="name">Name</string>
    <string name="blood_type">Blood Type</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="users_information">Users Information</string>
    <string name="reviews">Reviews</string>
    <string name="appointments">Appointments</string>
    <string name="busy">Busy</string>
    <string name="fairly_busy">Fairly Busy</string>
    <string name="free">Free</string>
    <string name="location_status">Location Status</string>
    <string name="shop_profile">Shop Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="setup_shop_profile">Setup Shop Profile</string>
    <string name="shop_name">Shop Name</string>
    <string name="contact_info">Contact Info</string>
    <string name="owner_name">Owner Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="charging_stations_near_you">Charging Stations Near You</string>
    <string name="keels_kollupitiya">Keells Kollupitiya</string>
    <string name="keels_slave_island">Keells Union Place</string>
    <string name="e_shift_kollupitiya">E Shift Kollupitiya</string>
    <string name="need_more_directions">Need More Directions</string>
    <string name="enter_start_location">Enter start location</string>
    <string name="enter_end_location">Enter end location</string>
    <string name="directions">Directions</string>
    <string name="shop_type">Shop Type</string>
    <string name="compatible_types">Compatible Charger Types</string>
    <string name="app_version_1_0">App Version - 1.0</string>
    <string name="privacy_policy_and_terms_of_use">Privacy Policy and Terms of Use</string>

</resources>