<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg02"
    tools:context=".VendorHomeActivity">

    <Button
        android:id="@+id/btnVenH01"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:text="@string/reviews"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.930" />

    <Button
        android:id="@+id/btnVenH02"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:text="@string/appointments"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.830" />

    <RadioGroup
        android:id="@+id/lstat"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">

        <RadioButton
            android:id="@+id/radio01"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:text="@string/busy" />

        <RadioButton
            android:id="@+id/radio02"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:text="@string/fairly_busy" />

        <RadioButton
            android:id="@+id/radio03"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:text="@string/free" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvVenH01"
        android:layout_width="227dp"
        android:layout_height="46dp"
        android:text="@string/location_status"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <ImageView
        android:id="@+id/img07"
        android:layout_width="360dp"
        android:layout_height="125dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132"
        app:srcCompat="@drawable/evcharge" />

    <TextView
        android:id="@+id/tvVenH02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_profile"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

</androidx.constraintlayout.widget.ConstraintLayout>