<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg03"
    tools:context=".ChargingStationsActivity">

    <TextView
        android:id="@+id/tvCS01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charging_stations_near_you"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="613dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvid01"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/keels_kollupitiya"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/tvid02"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/keels_slave_island"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/tvid03"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/e_shift_kollupitiya"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>